[package]
name = "line-bot-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
# serde = "1.0.136"
serde = { version = "1.0", features = ["derive"] }